Fixing input editable not visible (#178)

--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -1973,7 +1973,7 @@ color: #e6e6e6;
     font-size: 20px;
     height: 36px !important;
     margin: 10px 10px 10px 0 !important;
-    padding: 5px 0 !important;
+    padding: 5px 5px !important;
     border: none;
   }
 
